cluster/apps/default/zettelrobbe/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zettelrobbe
  namespace: default
spec:
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: zettelrobbe
